samples/_failures_safe/1761339576_3ead53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e4398bb.c: In function ‘main’:
./samples/SAFE/__tmp_6e4398bb.c:171:5: error: expected declaration or statement at end of input
  171 |     }
      |     ^
